empty 및 스타일 수정

--- a/css/curr-mo.less
+++ b/css/curr-mo.less
@@ -238,8 +238,8 @@ section {
             &.list4 { .cover('../images/mo/curr/curr3-pic4.png'); .bg-c; }
           }
         }
-        .search-result {
-          ul { .-v(#CDD0D3,2);
+        .search-result {  .-t(#CDD0D3,2);
+          ul { .-b(#CDD0D3,2);
             li { .tl; .p(0); .-b(#D9D9D9);
               &:last-child { .-b; }
               > div { .p(20); .-box; }
