--- a/css/out-mo.less
+++ b/css/out-mo.less
@@ -4,8 +4,8 @@ section {
 
     article {
       &.out01 {
-        .art-top { .mb(0); .-b; }
-        .review-list { .tl; .mt(30); .-t(#D9D9D9,2);
+        .art-top { .mb(0); .pb(50); }
+        .review-list { .tl;
           li {
             .btn { .fs(16,30); .-b(#D9D9D9); .p(20); .-box; .block; .rel;
               &:after { .cnt; .wh(30,30); .contain('../images/mo/out/ico-arr-u.png'); .abs; .rt(20,20); pointer-events: none; }
@@ -72,23 +72,25 @@ section {
             }
           }
         }
-
       }
     }
+    .empty { .mt(60); }
   }
-  .cnt-list { .mt(50); .-v(#CDD0D3,2);
-    li { .p(20); .-box; .-b(#D9D9D9); .rel;
-      &:last-child { .-b; }
-      p { .fs(16,25);
-        &.tit { .c(#282828); .mb(20); .regular; }
-        &.date, &.publisher { .fs(14,22); .c(#717377);
-          span { .ml(24); .rel; .ib;
-            &:after { .cnt; .wh(2,12); .bgc(#D9D9D9); .abs; .lt(-13,6); }
+  .cnt-list-wrap { .mt(50); .-t(#CDD0D3,2);
+    .cnt-list { .-b(#CDD0D3,2);
+      li { .p(20); .-box; .-b(#D9D9D9); .rel;
+        &:last-child { .-b; }
+        p { .fs(16,25);
+          &.tit { .c(#282828); .mb(20); .regular; }
+          &.date, &.publisher { .fs(14,22); .c(#717377);
+            span { .ml(24); .rel; .ib;
+              &:after { .cnt; .wh(2,12); .bgc(#D9D9D9); .abs; .lt(-13,6); }
+            }
           }
+          &.publisher { .mt(5); }
         }
-        &.publisher { .mt(5); }
+        .btn { .f; .abs; .lt; }
       }
-      .btn { .f; .abs; .lt; }
     }
   }
 }
