--- a/css/squ-mo.less
+++ b/css/squ-mo.less
@@ -30,8 +30,8 @@ section {
             &:nth-child(2) { .-t(#D9D9D9); .br-r(10); }
           }
         }
-        .view { .mt(50); .hide;
-          .faq-list { .-t(#CDD0D3,2); .tl;
+        .view { .mt(50); .-t(#CDD0D3,2); .hide;
+          .faq-list {  .tl;
             li { .fs(16,25); .-b(#D9D9D9);
               .btn { .f; .c(#282828); .p(20,70,20,20); .-box; .rel;
                 &:after { .cnt; .wh(30,30); .contain('../images/mo/squ/ico-arr-d.png'); .abs; .rt(20,50%); .mt(-15); }
