--- a/css/style-mo.css
+++ b/css/style-mo.css
@@ -51,6 +51,7 @@ input {
 }
 .container .wrap {
   height: calc(var(--vh, 1vh) * 100);
+  position: relative;
 }
 .container .wrap header {
   width: 100%;
@@ -90,21 +91,6 @@ input {
   top: 0.44444444rem;
   left: auto;
   bottom: auto;
-}
-.container .wrap header.scroll {
-  position: fixed;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-}
-.container .wrap header.scroll h1 .logo {
-  background-image: url('../images/mo/home/LOGO_Color.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-.container .wrap header.scroll .menu {
-  background-image: url('../images/mo/home/ico-menu-black.png');
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 .container .wrap nav {
   position: fixed;
@@ -212,84 +198,6 @@ input {
 .container .wrap footer {
   position: relative;
   border-top: 1px solid #D9D9D9;
-}
-.container .wrap footer .link-wrap .link {
-  width: 1.44444444rem;
-  height: 1.44444444rem;
-  background-image: url('../images/mo/home/ico-link.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: absolute;
-  right: 0.44444444rem;
-  top: -4.75rem;
-  left: auto;
-  bottom: auto;
-}
-.container .wrap footer .link-wrap .link-list {
-  width: 4.58333333rem;
-  height: 5.22222222rem;
-  position: absolute;
-  right: 0.44444444rem;
-  top: -5.02777778rem;
-  left: auto;
-  bottom: auto;
-  transform: translateY(-100%);
-  display: none;
-}
-.container .wrap footer .link-wrap .link-list .btn {
-  line-height: 1.22222222rem;
-  color: #717377;
-  text-align: left;
-  padding-left: 0.52777778rem;
-  box-sizing: border-box;
-  width: 4.58333333rem;
-  height: 1.22222222rem;
-  border-radius: 0.27777778rem;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(25, 58, 75, 0.1);
-  border: 1px solid #E8EBEE;
-  margin-bottom: 0.08333333rem;
-  position: relative;
-}
-.container .wrap footer .link-wrap .link-list .btn i {
-  width: 0.55555556rem;
-  height: 0.55555556rem;
-  position: absolute;
-  right: 0.33333333rem;
-  top: 0.33333333rem;
-  left: auto;
-  bottom: auto;
-  background-image: url('../images/mo/home/ico-link-arrow.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-.container .wrap footer .link-wrap .link-list .btn.on {
-  color: #04B0E2;
-}
-.container .wrap footer .link-wrap .link-list .btn.on i {
-  background-image: url('../images/mo/home/ico-link-arrow-on.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-.container .wrap footer .link-wrap.open .link {
-  background-image: url('../images/mo/home/ico-link-x.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-.container .wrap footer .link-wrap.open .link-list {
-  display: block;
-}
-.container .wrap footer .top {
-  width: 2rem;
-  height: 2rem;
-  background-image: url('../images/mo/home/ico-top.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: absolute;
-  right: 0.16666667rem;
-  top: -3.16666667rem;
-  left: auto;
-  bottom: auto;
 }
 .container .wrap footer .consortium {
   font-size: 0.44444444rem;
@@ -467,6 +375,97 @@ input {
   background-image: url('../images/mo/home/ft-partner2.png');
   background-repeat: no-repeat;
   background-size: contain;
+}
+.container .wrap .link-wrap {
+  position: fixed;
+  right: 0.44444444rem;
+  bottom: 3.30555556rem;
+  left: auto;
+  top: auto;
+  z-index: 5;
+  transition: bottom 0.5s;
+  transition-timing-function: ease-out;
+}
+.container .wrap .link-wrap .link {
+  width: 1.44444444rem;
+  height: 1.44444444rem;
+  background-image: url('../images/mo/home/ico-link.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.container .wrap .link-wrap .link-list {
+  width: 4.58333333rem;
+  height: 5.22222222rem;
+  position: absolute;
+  right: 0rem;
+  bottom: 1.72222222rem;
+  left: auto;
+  top: auto;
+  display: none;
+}
+.container .wrap .link-wrap .link-list .btn {
+  line-height: 1.22222222rem;
+  color: #717377;
+  text-align: left;
+  padding-left: 0.52777778rem;
+  box-sizing: border-box;
+  width: 4.58333333rem;
+  height: 1.22222222rem;
+  border-radius: 0.27777778rem;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(25, 58, 75, 0.1);
+  border: 1px solid #E8EBEE;
+  margin-bottom: 0.08333333rem;
+  position: relative;
+}
+.container .wrap .link-wrap .link-list .btn i {
+  width: 0.55555556rem;
+  height: 0.55555556rem;
+  position: absolute;
+  right: 0.33333333rem;
+  top: 0.33333333rem;
+  left: auto;
+  bottom: auto;
+  background-image: url('../images/mo/home/ico-link-arrow.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.container .wrap .link-wrap .link-list .btn.on {
+  color: #04B0E2;
+}
+.container .wrap .link-wrap .link-list .btn.on i {
+  background-image: url('../images/mo/home/ico-link-arrow-on.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.container .wrap .link-wrap.open .link {
+  background-image: url('../images/mo/home/ico-link-x.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.container .wrap .link-wrap.open .link-list {
+  display: block;
+}
+.container .wrap .link-wrap.btt {
+  bottom: 12.97222222rem;
+}
+.container .wrap .top {
+  width: 2rem;
+  height: 2rem;
+  background-image: url('../images/mo/home/ico-top.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: fixed;
+  right: 0.16666667rem;
+  bottom: 1.11111111rem;
+  left: auto;
+  top: auto;
+  z-index: 5;
+  transition: bottom 0.5s;
+  transition-timing-function: ease-out;
+}
+.container .wrap .top.btt {
+  bottom: 10.77777778rem;
 }
 .container .wrap .wrap-swiper {
   width: 100%;
@@ -3633,7 +3632,7 @@ input {
   text-align: left;
   margin-bottom: 0.83333333rem;
 }
-.container .wrap section article .map-wrap {
+.container .wrap section article .blink-wrap .map-wrap {
   width: 8.27777778rem;
   height: 10.69444444rem;
   background-image: url('../images/mo/intro/position.png');
@@ -3643,12 +3642,12 @@ input {
   margin-right: auto;
   position: relative;
 }
-.container .wrap section article .map-wrap .pos {
+.container .wrap section article .blink-wrap .map-wrap .pos {
   width: 2.11111111rem;
   height: 2.11111111rem;
   position: absolute;
 }
-.container .wrap section article .map-wrap .pos span {
+.container .wrap section article .blink-wrap .map-wrap .pos span {
   font-size: 0.44444444rem;
   line-height: 1.11111111rem;
   text-align: center;
@@ -3656,7 +3655,6 @@ input {
   font-weight: 700;
   width: 1.11111111rem;
   height: 1.11111111rem;
-  background-color: #8F6CF4;
   border-radius: 50%;
   position: absolute;
   left: 0.5rem;
@@ -3665,7 +3663,21 @@ input {
   bottom: auto;
   z-index: 1;
 }
-.container .wrap section article .map-wrap .pos i {
+.container .wrap section article .blink-wrap .map-wrap .pos span:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0rem;
+  top: 0rem;
+  right: auto;
+  bottom: auto;
+  border-radius: 50%;
+  background-color: #8F6CF4;
+  z-index: -1;
+}
+.container .wrap section article .blink-wrap .map-wrap .pos i {
   width: 2.11111111rem;
   height: 2.11111111rem;
   position: absolute;
@@ -3676,39 +3688,31 @@ input {
   background: rgba(143, 108, 244, 0.15);
   border-radius: 50%;
 }
-.container .wrap section article .map-wrap .pos.pos1 {
+.container .wrap section article .blink-wrap .map-wrap .pos.pos1 {
   left: 3.25rem;
   top: 1.47222222rem;
   right: auto;
   bottom: auto;
 }
-.container .wrap section article .map-wrap .pos.pos2 {
+.container .wrap section article .blink-wrap .map-wrap .pos.pos2 {
   left: 2.02777778rem;
   top: 3.36111111rem;
   right: auto;
   bottom: auto;
 }
-.container .wrap section article .map-wrap .pos.pos3 {
+.container .wrap section article .blink-wrap .map-wrap .pos.pos3 {
   left: 4rem;
   top: 5.5rem;
   right: auto;
   bottom: auto;
 }
-.container .wrap section article .map-wrap .pos.pos4 {
+.container .wrap section article .blink-wrap .map-wrap .pos.pos4 {
   left: 6.38888889rem;
   top: 5.83333333rem;
   right: auto;
   bottom: auto;
 }
-.container .wrap section article .map-wrap .pos.blink i {
-  animation: blink 0.5s step-end infinite;
-}
-@keyframes blink {
-  50% {
-    opacity: 0;
-  }
-}
-.container .wrap section article .list span {
+.container .wrap section article .blink-wrap .list span {
   font-size: 0.5rem;
   line-height: 1.05555556rem;
   color: #fff;
@@ -3727,7 +3731,7 @@ input {
   margin-bottom: 0rem;
   margin-left: 0.55555556rem;
 }
-.container .wrap section article .list span:after {
+.container .wrap section article .blink-wrap .list span:after {
   content: '';
   display: block;
   width: 0.69444444rem;
@@ -3741,7 +3745,7 @@ input {
   right: auto;
   bottom: auto;
 }
-.container .wrap section article .list .l-inner {
+.container .wrap section article .blink-wrap .list .l-inner {
   box-shadow: 0 2px 10px rgba(40, 40, 40, 0.15);
   overflow: visible;
   padding-top: 0.61111111rem;
@@ -3751,12 +3755,24 @@ input {
   margin-top: -0.52777778rem;
   box-sizing: border-box;
 }
-.container .wrap section article .list .l-inner p {
+.container .wrap section article .blink-wrap .list .l-inner p {
   color: #282828;
   text-align: left;
 }
-.container .wrap section article .list .l-inner p.l-tit {
+.container .wrap section article .blink-wrap .list .l-inner p.l-tit {
   margin-top: 0.55555556rem;
+}
+.container .wrap section article .blink-wrap.blink0 .pos1 span:after,
+.container .wrap section article .blink-wrap.blink1 .pos2 span:after,
+.container .wrap section article .blink-wrap.blink2 .pos3 span:after,
+.container .wrap section article .blink-wrap.blink3 .pos4 span:after {
+  animation: blink 0.5s step-end infinite;
+}
+@keyframes blink {
+  50% {
+    opacity: 0.5;
+    transform: scale(0.9);
+  }
 }
 .container .wrap section article .l-tit {
   font-size: 0.5rem;
@@ -4975,9 +4991,11 @@ input {
   background-size: cover;
   background-position: center;
 }
+.container .wrap section.curriculum article.curr03 .search-result {
+  border-top: 0.05555556rem solid #CDD0D3;
+}
 .container .wrap section.curriculum article.curr03 .search-result ul {
   border-bottom: 0.05555556rem solid #CDD0D3;
-  border-top: 0.05555556rem solid #CDD0D3;
 }
 .container .wrap section.curriculum article.curr03 .search-result ul li {
   text-align: left;
@@ -6029,12 +6047,10 @@ input {
 }
 .container .wrap section.out-come article.out01 .art-top {
   margin-bottom: 0rem;
-  border-bottom: 0;
+  padding-bottom: 1.38888889rem;
 }
 .container .wrap section.out-come article.out01 .review-list {
   text-align: left;
-  margin-top: 0.83333333rem;
-  border-top: 0.05555556rem solid #D9D9D9;
 }
 .container .wrap section.out-come article.out01 .review-list li .btn {
   font-size: 0.44444444rem;
@@ -6278,43 +6294,48 @@ input {
   border-radius: 0 0 0.27777778rem 0.27777778rem;
   border-bottom: 1px solid #D9D9D9;
 }
-.container .wrap section .cnt-list {
+.container .wrap section.out-come .empty {
+  margin-top: 1.66666667rem;
+}
+.container .wrap section .cnt-list-wrap {
   margin-top: 1.38888889rem;
-  border-bottom: 0.05555556rem solid #CDD0D3;
   border-top: 0.05555556rem solid #CDD0D3;
 }
-.container .wrap section .cnt-list li {
+.container .wrap section .cnt-list-wrap .cnt-list {
+  border-bottom: 0.05555556rem solid #CDD0D3;
+}
+.container .wrap section .cnt-list-wrap .cnt-list li {
   padding: 0.55555556rem;
   box-sizing: border-box;
   border-bottom: 1px solid #D9D9D9;
   position: relative;
 }
-.container .wrap section .cnt-list li:last-child {
+.container .wrap section .cnt-list-wrap .cnt-list li:last-child {
   border-bottom: 0;
 }
-.container .wrap section .cnt-list li p {
+.container .wrap section .cnt-list-wrap .cnt-list li p {
   font-size: 0.44444444rem;
   line-height: 0.69444444rem;
 }
-.container .wrap section .cnt-list li p.tit {
+.container .wrap section .cnt-list-wrap .cnt-list li p.tit {
   color: #282828;
   margin-bottom: 0.55555556rem;
   font-weight: 400;
 }
-.container .wrap section .cnt-list li p.date,
-.container .wrap section .cnt-list li p.publisher {
+.container .wrap section .cnt-list-wrap .cnt-list li p.date,
+.container .wrap section .cnt-list-wrap .cnt-list li p.publisher {
   font-size: 0.38888889rem;
   line-height: 0.61111111rem;
   color: #717377;
 }
-.container .wrap section .cnt-list li p.date span,
-.container .wrap section .cnt-list li p.publisher span {
+.container .wrap section .cnt-list-wrap .cnt-list li p.date span,
+.container .wrap section .cnt-list-wrap .cnt-list li p.publisher span {
   margin-left: 0.66666667rem;
   position: relative;
   display: inline-block;
 }
-.container .wrap section .cnt-list li p.date span:after,
-.container .wrap section .cnt-list li p.publisher span:after {
+.container .wrap section .cnt-list-wrap .cnt-list li p.date span:after,
+.container .wrap section .cnt-list-wrap .cnt-list li p.publisher span:after {
   content: '';
   display: block;
   width: 0.05555556rem;
@@ -6326,10 +6347,10 @@ input {
   right: auto;
   bottom: auto;
 }
-.container .wrap section .cnt-list li p.publisher {
+.container .wrap section .cnt-list-wrap .cnt-list li p.publisher {
   margin-top: 0.13888889rem;
 }
-.container .wrap section .cnt-list li .btn {
+.container .wrap section .cnt-list-wrap .cnt-list li .btn {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -6431,10 +6452,10 @@ input {
 }
 .container .wrap section.square article.squ04 .view {
   margin-top: 1.38888889rem;
+  border-top: 0.05555556rem solid #CDD0D3;
   display: none;
 }
 .container .wrap section.square article.squ04 .view .faq-list {
-  border-top: 0.05555556rem solid #CDD0D3;
   text-align: left;
 }
 .container .wrap section.square article.squ04 .view .faq-list li {
