--- a/css/style-mo.less
+++ b/css/style-mo.less
@@ -155,6 +155,7 @@ input { .bgc(#fff); }
                   .swiper-slide { .tc;
                     ul {
                       li { .rel; .tl; .-b(#D9D9D9); .p(10,0); .-box;
+                        &:nth-last-child(2) { .-b; }
                         &:last-child { .-b; }
                         p { .regular;
                           &.txt { .lh(28); .c(#191919); .ellipsis; }
