--- a/css/style-web.less
+++ b/css/style-web.less
@@ -355,6 +355,7 @@
                       .swiper-slide {
                         ul { .mt(3);
                           li {
+                            &:nth-last-child(2) { .-b(#D9D9D9); }
                             &:first-child p:first-child { .bold; .c(#8F6CF4); }
                             p { .fs(18,28); .regular;
                               &.txt { .w(376); .ib; .vam; }
